# tempsbeta

./: .env_example  .gitignore  README.md  nuxt.config.js  package.json  pyproject.toml  tailwind.config.js
components/: ClimbingArea.vue  ClimbingAreasList.vue
functions/: get-nearby-areas.js  get-weather-for-area.js
mp_scraper/: middlewares.py  pipelines.py  scrapy.cfg  settings.py
mp_scraper/mp_scraper/: items.py  settings.py
mp_scraper/mp_scraper/spiders/: areas_spider.py
mp_scraper/spiders/: areas_spider.py
pages/: index.vue
