[tool.poetry]
name = "tempsbeta"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.5.0"
pymongo = "^3.12.0"
dnspython = "^2.1.0"
python-dotenv = "^0.18.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
